cabal-version:      2.4
name:               euler-solutions
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Yue Yu
maintainer:         yue.yu@superfish.me

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable Problem0001
    main-is:          Problem0001.hs

    -- Modules included in this executable, other than Main.
    other-modules:    EulerUtils

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   app
    default-language: Haskell2010

executable Problem0002
    main-is:          Problem0002.hs

    -- Modules included in this executable, other than Main.
    other-modules:    EulerUtils

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   app
    default-language: Haskell2010

executable Problem0003
    main-is:          Problem0003.hs

    -- Modules included in this executable, other than Main.
    other-modules:    EulerUtils

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   app
    default-language: Haskell2010

executable Problem0004
    main-is:          Problem0004.hs

    -- Modules included in this executable, other than Main.
    other-modules:    EulerUtils

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        , base        ^>=4.16.4.0
        , containers

    hs-source-dirs:   app
    default-language: Haskell2010

executable Problem0005
    main-is:          Problem0005.hs

    -- Modules included in this executable, other than Main.
    other-modules:    EulerUtils

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   app
    default-language: Haskell2010

executable Problem0006
    main-is:          Problem0006.hs

    -- Modules included in this executable, other than Main.
    other-modules:    EulerUtils

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   app
    default-language: Haskell2010

executable Problem0007
    main-is:          Problem0007.hs

    -- Modules included in this executable, other than Main.
    other-modules:    EulerUtils

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   app
    default-language: Haskell2010

executable Problem0008
    main-is:          Problem0008.hs

    -- Modules included in this executable, other than Main.
    other-modules:    EulerUtils

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   app
    default-language: Haskell2010

executable Problem0009
    main-is:          Problem0009.hs

    -- Modules included in this executable, other than Main.
    other-modules:    EulerUtils

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   app
    default-language: Haskell2010

executable Problem0010
    main-is:          Problem0010.hs

    -- Modules included in this executable, other than Main.
    other-modules:    EulerUtils

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   app
    default-language: Haskell2010
